<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItemActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/addMeal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_meal"
        android:background="@color/teal_200"
        android:textStyle="bold"
        android:textSize="@dimen/textSize"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etTitle"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etDescription"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etIngredients"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etCalories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etCalories"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etLinks"
        android:inputType="text"
        android:autofillHints="" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text"
        android:backgroundTint="@color/teal_200"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:onClick="addMeal"/>


</LinearLayout>