<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/cardview_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_placeholder"
            android:padding="@dimen/default_padding"
            style="@style/FoodTitle"/>

        <ImageView
            android:id="@+id/imageViewMeal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/mealDescriptionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meal_description_title_placeholder"
            android:padding="@dimen/default_padding"
            style="@style/mealDescriptionTitle"/>

        <TextView
            android:id="@+id/mealDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meal_description_placeholder"
            android:padding="@dimen/default_padding"
            style="@style/mealDescriptionText"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>